[package]
name = "cfproxy-rs"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = "0.26"
tokio-rustls = "0.26"
webpki-roots = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
lto = true
